Separated spaing tree logic

--- a/coursework/coursework.vcxproj
+++ b/coursework/coursework.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="AdjacencyList.h" />
     <ClInclude Include="AdjacencyMatrix.h" />
+    <ClInclude Include="Algorithm.h" />
     <ClInclude Include="EdgeList.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="GraphContent.h" />
@@ -152,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="AdjacencyList.cpp" />
     <ClCompile Include="AdjacencyMatrix.cpp" />
+    <ClCompile Include="Algorithm.cpp" />
     <ClCompile Include="EdgeList.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="GraphContent.cpp" />
